--- a/assets/js/notes.html
+++ b/assets/js/notes.html
@@ -1,21 +1,93 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Realtor Call List</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      crossorigin="anonymous"
+    />
 
-    <div class="dropdown">
-        <button class="btn btn-info dropdown-toggle textBtn" type="button" id="textBtn-1" data-bs-toggle="dropdown" aria-expanded="false">Text </button> 
-        <ul class="dropdown-menu" aria-labelledby="status-btn-1">
-             <li>
-                <a class="dropdown-item" href="sms:813-507-3287&amp;body=This is Nathan MLO @ Umortgage. Thanks for taking my call today! I pride myself in keeping an open line of communication with my agent partners throughout the loan process from start to finish; consitantly providing updates, and proactively avoiding possible obsticals. I look forward to meeting up and becoming your trusted MLO. Be sure to save my contact! Nathan Cowan, MLO @ Umortgage. NMLS # 2142312 https://nathancowanmlo.com/contact/Cowan-MLO_Nathan.vcf">First Talk To</a></li><li><a class="dropdown-item" href="sms:813-507-3287&amp;body=Feel free to call anytime or schedule an appointment on my Calendly. Nathan Cowan, MLO @ Umortgage. NMLS # 2142312 https://calendly.com/nathancowan-mlo">Calendly</a>
-                </li> 
-                <li>
-                    <a class="dropdown-item" href="sms:813-507-3287&amp;body=Now may not seem like the right time but save my number and I hope to work with you sometime soon. I'm a local MLO in the Tampa area and communication and availablility set me appart from the rest. I specialize in conventional and non-qm home loans and help clients all over the state of FL. Be sure to save my contact: Nathan Cowan, MLO @ Umortgage. NMLS # 2142365">Not The Right Time</a></li> <li><a class="dropdown-item" href="sms:813-507-3287&amp;body=What Is a Non-QM Loan? A Non-QM loan, or a non-qualified mortgage, is a type of mortgage loan that allows you to qualify based on alternative methods, instead of the traditional income verification required for most loans. Common examples include bank statements or using your assets as income.Nathan Cowan, MLO @ Umortgage. NMLS # 2142365">Non-QM</a></li></a></li> <li><a class="dropdown-item" href="sms:813-507-3287&amp;body=Top level communication and availability; call anytime. Nathan Cowan, MLO @ Umortgage. NMLS # 2142312 https://nathancowanmlo.com/contact/Cowan-MLO_Nathan.vcf">Top-Level Communication </a></li></ul></div><td><p name="email-input"> </p></td><td>Brandon</td>
+    <title>Document</title>
+  </head>
+  <body>
+    <tr data-id="1">
+      <td>
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            data-action="status-button"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+            onClick="buttonFunc()"
+          >
+            Dropdown button
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#" id="interested-contact">
+              Interested in Contact Info
+            </a>
+            <a class="dropdown-item" href="#" id="PAL">
+              Pre-Approval Requested
+            </a>
+            <a class="dropdown-item" href="#" id="SPA">SPA</a>
+            <a class="dropdown-item" href="#" id="sent-LE">Sent LE</a>
+            <a class="dropdown-item" href="#" id="i2p">Accepted I2P</a>
+            <a class="dropdown-item" href="#" id="appraisal-complete">
+              Appraisal Complete
+            </a>
+            <a class="dropdown-item" href="#" id="c2c">Clear to Close</a>
+          </div>
+        </div>
+      </td>
 
-<div class="dropdown">
-  
-<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-</div>
+      <td>
+        <button
+          type="button"
+          class="btn btn-secondary"
+          onClick="buttonFunc()"
+          data-action="opt-out"
+        >
+          Request
+        </button>
+      </td>
+    </tr>
+
+    <script>
+      const tableParent = document.getElementById('table-parent')
+
+      tableParent.addEventListener('click', function (event) {
+        // Check if the clicked element is a button with data-action="opt-out"
+        if (
+          event.target.tagName.toLowerCase() === 'button' &&
+          event.target.getAttribute('data-action') === 'opt-out'
+        ) {
+          // Remove the "btn-secondary" class and add the "btn-danger" class
+          event.target.classList.remove('btn-secondary')
+          event.target.classList.add('btn-danger')
+
+          // Change the text on the button
+          event.target.textContent = 'Do Not Call'
+        }
+      })
+
+      const dropdownMenu = document.querySelector('.dropdown-menu')
+
+      dropdownMenu.addEventListener('click', function (event) {
+        // Get the id of the selected dropdown menu item
+        const selectedOptionId = event.target.getAttribute('id')
+
+        // Log the selected option id
+        console.log(selectedOptionId)
+      })
+    </script>
+  </body>
+</html>
